kubernetes/overlays/dev/worker-patch.yaml
eapiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 3 
  template:
    spec:
      containers:
      - name: worker
        volumeMounts:
        - name: airflow-dags
          mountPath: /usr/local/airflow/dags
        - name: airflow-plugins
          mountPath: /usr/local/airflow/plugins
        - name: airflow-logs
          mountPath: /usr/local/airflow/logs
        #- name: exp
        #  mountPath: /gpfs/slac/cryo/fs1/exp/
        - name: sdf-exp
          mountPath: /sdf/group/cryoem/exp/
        - name: tem1
          mountPath: /srv/cryoem/tem1
        - name: tem1-gainrefs
          mountPath: /srv/cryoem/tem1-gainrefs
        - name: tem2
          mountPath: /srv/cryoem/tem2
        - name: tem2-gainrefs
          mountPath: /srv/cryoem/tem2-gainrefs
        - name: tem3
          mountPath: /srv/cryoem/tem3
        - name: tem3-gainrefs
          mountPath: /srv/cryoem/tem3-gainrefs
        - name: tem4
          mountPath: /srv/cryoem/tem4
        - name: tem4-gainrefs
          mountPath: /srv/cryoem/tem4-gainrefs
        - name: temalpha
          mountPath: /srv/cryoem/temalpha
        - name: temalpha-gainrefs
          mountPath: /srv/cryoem/temalpha-gainrefs
        - name: tembeta
          mountPath: /srv/cryoem/tembeta
        - name: tembeta-gainrefs
          mountPath: /srv/cryoem/tembeta-gainrefs
        - name: temgamma
          mountPath: /srv/cryoem/temgamma
        - name: temgamma-gainrefs
          mountPath: /srv/cryoem/temgamma-gainrefs
        - name: fib1
          mountPath: /srv/cryoem/fib1
      volumes:
      - name: airflow-dags
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--sdf-dags
      - name: airflow-plugins
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--sdf-plugins
      - name: airflow-logs
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--sdf-logs
      #- name: exp
      #  persistentVolumeClaim:
      #    claimName: cryoem-daq-dev--exp
      - name: sdf-exp
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--sdf-exp
      - name: tem1
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--tem1
      - name: tem1-gainrefs
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--tem1-gainrefs
      - name: tem2
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--tem2
      - name: tem2-gainrefs
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--tem2-gainrefs
      - name: tem3
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--tem3
      - name: tem3-gainrefs
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--tem3-gainrefs
      - name: tem4
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--tem4
      - name: tem4-gainrefs
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--tem4-gainrefs
      - name: temalpha
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--temalpha
      - name: temalpha-gainrefs
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--temalpha-gainrefs
      - name: tembeta
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--tembeta
      - name: tembeta-gainrefs
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--tembeta-gainrefs
      - name: temgamma
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--temgamma
      - name: temgamma-gainrefs
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--temgamma-gainrefs
      - name: fib1
        persistentVolumeClaim:
          claimName: cryoem-daq-dev--fib1
